# high-performance-hair-rendering

./: .gitmodules  CMakeLists.txt
shaders/: compile.sh  triangle.frag  triangle.vert  triangle.vert.hlsl
source/: main.c  main.cpp  shader.c  shader.cpp  shader.h  swapchain.c  swapchain.cpp  swapchain.h
